// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Login page > Login/Logout > Calls the login method with valid form data 1`] = `
<!-- User is already logged in -->
<!-- Otherwise, the form (form handles error UI on its own) -->
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Sign In</h1>
  <form class="pdap-form flex flex-col" id="login" name="login">
    <!---->
    <div class="pdap-grid-container pdap-input">
      <input id="email" name="email" placeholder="Your email address" type="text">
      <!---->
      <!---->
      <label class="pdap-input-label" for="email">Email</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <!--v-if-->
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Login</button>
  </form>
  <div class="flex flex-col items-start sm:flex-row sm:items-center sm:gap-4 w-full">
    <button class="pdap-button pdap-button-secondary flex-1 max-w-full">Create Account</button>
    <a class="pdap-button-secondary flex-1 max-w-full">Reset Password</a>
  </div>
</main>
`;

exports[`Login page > Signup > Calls the signup method with valid data 1`] = `
<!-- User is already logged in -->
<!-- Otherwise, the form (form handles error UI on its own) -->
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Sign In</h1>
  <form class="pdap-form flex flex-col" id="login" name="login">
    <!---->
    <div class="pdap-grid-container pdap-input">
      <input id="email" name="email" placeholder="Your email address" type="text">
      <!---->
      <!---->
      <label class="pdap-input-label" for="email">Email</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <ul class="text-med mb-8"> Passwords must be at least 8 characters and include: <li>1 uppercase letter</li>
      <li>1 lowercase letter</li>
      <li>1 number</li>
      <li>1 special character</li>
    </ul>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Create account</button>
  </form>
  <div class="flex flex-col items-start sm:flex-row sm:items-center sm:gap-4 w-full">
    <button class="pdap-button pdap-button-secondary flex-1 max-w-full">Log In</button>
    <a class="pdap-button-secondary flex-1 max-w-full">Reset Password</a>
  </div>
</main>
`;

exports[`Login page > Signup > Renders error message with mismatched passwords when trying to sign up 1`] = `
<!-- User is already logged in -->
<!-- Otherwise, the form (form handles error UI on its own) -->
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Sign In</h1>
  <form class="pdap-form flex flex-col" id="login" name="login">
    <div class="pdap-form-error-message">Passwords do not match, please try again.</div>
    <div class="pdap-grid-container pdap-input">
      <input id="email" name="email" placeholder="Your email address" type="text">
      <!---->
      <!---->
      <label class="pdap-input-label" for="email">Email</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <ul class="text-med mb-8"> Passwords must be at least 8 characters and include: <li>1 uppercase letter</li>
      <li>1 lowercase letter</li>
      <li>1 number</li>
      <li>1 special character</li>
    </ul>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Create account</button>
  </form>
  <div class="flex flex-col items-start sm:flex-row sm:items-center sm:gap-4 w-full">
    <button class="pdap-button pdap-button-secondary flex-1 max-w-full">Log In</button>
    <a class="pdap-button-secondary flex-1 max-w-full">Reset Password</a>
  </div>
</main>
`;

exports[`Login page > Signup > Renders error message with mismatched passwords when trying to sign up and re-validates form 1`] = `
<!-- User is already logged in -->
<!-- Otherwise, the form (form handles error UI on its own) -->
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Sign In</h1>
  <form class="pdap-form flex flex-col" id="login" name="login">
    <div class="pdap-form-error-message">Passwords do not match, please try again.</div>
    <div class="pdap-grid-container pdap-input">
      <input id="email" name="email" placeholder="Your email address" type="text">
      <!---->
      <!---->
      <label class="pdap-input-label" for="email">Email</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <ul class="text-med mb-8"> Passwords must be at least 8 characters and include: <li>1 uppercase letter</li>
      <li>1 lowercase letter</li>
      <li>1 number</li>
      <li>1 special character</li>
    </ul>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Create account</button>
  </form>
  <div class="flex flex-col items-start sm:flex-row sm:items-center sm:gap-4 w-full">
    <button class="pdap-button pdap-button-secondary flex-1 max-w-full">Log In</button>
    <a class="pdap-button-secondary flex-1 max-w-full">Reset Password</a>
  </div>
</main>
`;
